[package]
name = "pg_glimpse"
version = "0.7.1"
edition = "2021"
description = "A terminal-based PostgreSQL monitoring tool with live TUI"
license = "MIT"
keywords = ["postgresql", "monitoring", "tui", "database"]
categories = ["command-line-utilities", "database"]
rust-version = "1.74"
repository = "https://github.com/dlt/pg_glimpse"
homepage = "https://github.com/dlt/pg_glimpse"
readme = "README.md"
exclude = ["target/", "error.log", ".claude/", ".github/", "Formula/"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
thiserror = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
nucleo-matcher = "0.3"
arboard = "3"

[features]
integration = []

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
insta = "1.42"
proptest = "1.5"
serial_test = "3.3.1"

[profile.release]
lto = true
strip = true
